package eapli.base.contrato.repositories;

import eapli.base.contrato.domain.ContratoSLA;
import eapli.framework.domain.repositories.DomainRepository;

public interface ContratoRepository extends DomainRepository<Long, ContratoSLA> {

}
