package eapli.base.criticidade.repositories;

import eapli.base.criticidade.domain.Criticidade;
import eapli.framework.domain.repositories.DomainRepository;

public interface CriticidadeRepository extends DomainRepository<Long, Criticidade> {

}
