@startuml
'http://plantuml.com/skinparam.html
skinparam handwritten true
skinparam monochrome true
skinparam packageStyle rect
skinparam defaultFontName FG Virgil
skinparam shadowing false

class DefinirCriticidadeUI <<presentation>>
class DefinirCriticidadeController <<application>>
class PersistenceContext <<persistence>>
class RepositoryFactory <<factory>>
class ContratoRepository <<repository>>
class CriticidadeRepository <<repository>>



DefinirCriticidadeUI --> DefinirCriticidadeController
DefinirCriticidadeController : listCatalogo()
DefinirCriticidadeController : listCriticidade()
DefinirCriticidadeController : defineCriticidade(obj, etiqueta, escala, cor, designacao)
DefinirCriticidadeController : defineContrato(designacao)

DefinirCriticidadeController --> CriticidadeRepository
DefinirCriticidadeController --> ContratoRepository
DefinirCriticidadeController --> PersistenceContext
PersistenceContext : repositories()
DefinirCriticidadeController --> RepositoryFactory
RepositoryFactory : catalogo()
RepositoryFactory : criticidade()

PersistenceContext --> RepositoryFactory
RepositoryFactory --> CriticidadeRepository
RepositoryFactory --> ContratoRepository

CriticidadeRepository : save(nivelCriticidade)
CriticidadeRepository : findAllCriticidade()

ContratoRepository : save(cont)

@enduml
